// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sku Mutation createProduct Should create and delete sku 1`] = `
Object {
  "create": Object {
    "data": Object {
      "createSku": Object {
        "id": "11111111-1111-1111-1111-111111111110",
        "inventory": 10,
        "price": 9.99,
        "product": Object {
          "id": "11111111-1111-1111-1111-111111111113",
          "image": "image1.jpg",
          "name": "product1",
        },
        "sku": "S123",
      },
    },
    "errors": undefined,
    "extensions": undefined,
    "http": Object {
      "headers": Headers {
        Symbol(map): Object {
          "Cache-Control": Array [
            "max-age=5, public",
          ],
        },
      },
    },
  },
  "destroy": Object {
    "data": Object {
      "deleteSku": Object {
        "message": "Sku removed",
      },
    },
    "errors": undefined,
    "extensions": undefined,
    "http": Object {
      "headers": Headers {
        Symbol(map): Object {
          "Cache-Control": Array [
            "max-age=5, public",
          ],
        },
      },
    },
  },
}
`;

exports[`Sku Mutation createProduct Should update sku 1`] = `
Object {
  "data": Object {
    "updateSku": Object {
      "id": "11111111-1111-1111-1111-111111111112",
      "inventory": 5,
      "price": 4.12,
      "product": Object {
        "id": "11111111-1111-1111-1111-111111111113",
        "image": "image1.jpg",
        "name": "product3",
      },
      "sku": "S123",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {
        "Cache-Control": Array [
          "max-age=5, public",
        ],
      },
    },
  },
}
`;
